# workshop_graph_rag

./: notes.md  pyproject.toml
data/: expanded_graph_rag.html  knowledge_graph.html  knowledge_graph.json
solutions/part_03/: 01_graph_construction.py
